--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Link</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:wght@100..900&family=Montserrat:wght@200&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <section class="content">
-            <img src="/Profile.jpeg" alt="" class="profile">
+            <img src="Profile.jpeg" alt="" class="profile">
             <h1 class="name">Juan Pablo Jimenez Quiroz</h1>
             <h2 class="ubication">Medellin, Colombia</h2>
             <p class="description">"Fullstack developer in process"</p>
